# 25S_hw

./: .gitignore  Dockerfile  devenv.nix  main.py  pyproject.toml
.devcontainer/: devcontainer.json
